src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_if_empty_goto.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  3]  LOADNIL         R0 count=1
0003  [  4]  JMP             +0
0004  [  6]  RETURN          R0 count=1
