src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_if_empty_nested.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=3, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  4]  LOADNIL         R0 count=3
0003  [  7]  RETURN          R0 count=1
