src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_issue_65_conditional_return.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=5, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  1]  CLOSURE         R0 P0
0003  [  2]  CALLS_R0        R1 args=1 f=R0
0004  [  3]  LOADI           R1 1
0005  [  4]  NOT             R2 R1
0006  [  4]  JF              R2 +2
0007  [  4]  LOADI           R2 1
0008  [  4]  RETURN          R2 count=2
0009  [  4]  RETURN          R0 count=1

; prototype 0:
  ; function (params=0, vararg=false, stack=0, upvalues=0)
  ; code:
  0000  [  1]  FUNC
  0001  [  1]  RETURN0
