src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_jens.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  6]  CLOSURE         R0 P0
0002  [  6]  RETURN          R0 count=1

; prototype 0:
  ; function (params=1, vararg=false, stack=4, upvalues=1)
  ; upvalues:
  ;   U0 = local R0
  ; code:
  0000  [  2]  LTI             R0 #2 inv=false
  0001  [  2]  JMP             +1
  0002  [  3]  RETURN1         R0
  0003  [  5]  GETUPVAL        R1 U0
  0004  [  5]  SUBI            R2 R0 #1
  0005  [  5]  CALL_R1         R1 args=2
  0006  [  5]  GETUPVAL        R2 U0
  0007  [  5]  SUBI            R3 R0 #2
  0008  [  5]  CALL_R1         R2 args=2
  0009  [  5]  ADD             R1 R1 R2
  0010  [  5]  RETURN1         R1
