src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_jens2.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [ 10]  CLOSURE         R0 P0
0002  [ 10]  RETURN          R0 count=1

; prototype 0:
  ; function (params=0, vararg=false, stack=6, upvalues=1)
  ; constants:
  ;   K0 = 0
  ;   K1 = 10000
  ;   K2 = 1
  ;   K3 = "print"
  ; upvalues:
  ;   U0 = upvalue U0
  ; code:
  0000  [  2]  LOAD            R0 K0  ; 0
  0001  [  3]  LOAD            R1 K1  ; 10000
  0002  [  5]  LOAD            R2 K0  ; 0
  0003  [  5]  MOVE            R3 R1
  0004  [  5]  LOAD            R4 K2  ; 1
  0005  [  5]  FORPREP         R2 +2
  0006  [  6]  ADDI            R0 R0 #1
  0007  [  5]  FORLOOP         R2 -2
  0008  [  9]  GETTABUP        R2 U0 K3  ; "print"
  0009  [  9]  MOVE            R3 R0
  0010  [  9]  CALL_R0         R2 args=2
  0011  [ 10]  RETURN0
