src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_jmp_elim.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=10, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  6]  LOADI           R0 1
0003  [  6]  LOADI           R1 2
0004  [  6]  LOADI           R2 3
0005  [  8]  MOVE            R3 R1
0006  [  9]  MOVE            R4 R0
0007  [ 10]  MOVE            R5 R0
0008  [ 11]  JF              R1 +1
0009  [ 12]  LOADI           R2 1
0010  [ 15]  MOVE            R6 R3
0011  [ 15]  MOVE            R7 R4
0012  [ 15]  MOVE            R8 R5
0013  [ 15]  MOVE            R9 R2
0014  [ 15]  RETURN          R6 count=5
