src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_literal.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=3, upvalues=1)
; constants:
;   K0 = "a"
;   K1 = 581
;   K2 = "b"
;   K3 = 255
;   K4 = "c"
;   K5 = nil
;   K6 = "d"
;   K7 = true
;   K8 = "e"
;   K9 = false
;   K10 = "f"
;   K11 = "hello"
;   K12 = "g"
;   K13 = "world"
;   K14 = "h"
;   K15 = "woosh"
;   K16 = "i"
;   K17 = "l"
;   K18 = 50000.0
;   K19 = "j"
;   K20 = 206.0625
;   K21 = "k"
;   K22 = 0.1953125
;   K23 = "t"
;   K24 = "tl"
;   K25 = 59
;   K26 = 63
;   K27 = "tr"
;   K28 = "tg"
;   K29 = 0
;   K30 = 10
;   K31 = "anna"
;   K32 = 15
;   K33 = "james"
;   K34 = "20"
;   K35 = "y"
;   K36 = -18
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  LOAD            R0 K1  ; 581
0002  [  1]  SETTABUP        R0 U0 K0  ; "a"
0003  [  2]  LOAD            R0 K3  ; 255
0004  [  2]  SETTABUP        R0 U0 K2  ; "b"
0005  [  3]  LOAD            R0 K5  ; nil
0006  [  3]  SETTABUP        R0 U0 K4  ; "c"
0007  [  4]  LOAD            R0 K7  ; true
0008  [  4]  SETTABUP        R0 U0 K6  ; "d"
0009  [  5]  LOAD            R0 K9  ; false
0010  [  5]  SETTABUP        R0 U0 K8  ; "e"
0011  [  6]  LOAD            R0 K11  ; "hello"
0012  [  6]  SETTABUP        R0 U0 K10  ; "f"
0013  [  7]  LOAD            R0 K13  ; "world"
0014  [  7]  SETTABUP        R0 U0 K12  ; "g"
0015  [  8]  LOAD            R0 K15  ; "woosh"
0016  [  8]  SETTABUP        R0 U0 K14  ; "h"
0017  [  9]  LOAD            R0 K15  ; "woosh"
0018  [  9]  SETTABUP        R0 U0 K16  ; "i"
0019  [ 10]  LOAD            R0 K18  ; 50000.0
0020  [ 10]  SETTABUP        R0 U0 K17  ; "l"
0021  [ 11]  LOAD            R0 K20  ; 206.0625
0022  [ 11]  SETTABUP        R0 U0 K19  ; "j"
0023  [ 12]  LOAD            R0 K22  ; 0.1953125
0024  [ 12]  SETTABUP        R0 U0 K21  ; "k"
0025  [ 13]  NEWTABLE        R0 T0  ; {}
0026  [ 13]  SETTABUP        R0 U0 K23  ; "t"
0027  [ 14]  NEWTABLE        R0 T1  ; {} items=2
0028  [ 14]  LOAD            R1 K25  ; 59
0029  [ 14]  LOAD            R2 K26  ; 63
0030  [ 14]  SETLIST         R0 count=2 offset=0
0031  [ 14]  SETTABUP        R0 U0 K24  ; "tl"
0032  [ 15]  NEWTABLE        R0 T2  ; {anna=15, james=20}
0033  [ 15]  SETTABUP        R0 U0 K27  ; "tr"
0034  [ 16]  NEWTABLE        R0 T0  ; {}
0035  [ 17]  LOAD            R1 K29  ; 0
0036  [ 17]  LOAD            R2 K30  ; 10
0037  [ 17]  SETTABLE        R2 R0 R1
0038  [ 18]  LOAD            R1 K31  ; "anna"
0039  [ 18]  LOAD            R2 K32  ; 15
0040  [ 18]  SETTABLE        R2 R0 R1
0041  [ 19]  LOAD            R1 K33  ; "james"
0042  [ 19]  LOAD            R2 K34  ; "20"
0043  [ 19]  SETTABLE        R2 R0 R1
0044  [ 19]  SETTABUP        R0 U0 K28  ; "tg"
0045  [ 21]  LOAD            R0 K36  ; -18
0046  [ 21]  SETTABUP        R0 U0 K35  ; "y"
0047  [ 21]  RETURN          R0 count=1
