src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_loop_close.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=9, upvalues=1)
; constants:
;   K0 = 1
;   K1 = 3
;   K2 = 0
;   K3 = "ipairs"
;   K4 = "f"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  NEWTABLE        R0 T0  ; {}
0002  [  2]  LOAD            R1 K0  ; 1
0003  [  2]  LOAD            R2 K1  ; 3
0004  [  2]  LOAD            R3 K0  ; 1
0005  [  2]  FORPREP         R1 +4
0006  [  2]  CLOSURE         R5 P0
0007  [  2]  SETTABLE        R5 R0 R4
0008  [  2]  CLOSE           R4
0009  [  2]  FORLOOP         R1 -4
0010  [  3]  LOAD            R1 K2  ; 0
0011  [  4]  LTI             R1 #3 inv=false
0012  [  4]  JMP             +6
0013  [  4]  ADDI            R1 R1 #1
0014  [  4]  MOVE            R2 R1
0015  [  4]  CLOSURE         R3 P1
0016  [  4]  SETTABLE        R3 R0 R1
0017  [  4]  CLOSE           R2
0018  [  4]  JMP             -8
0019  [  5]  MOVE            R2 R1
0020  [  5]  CLOSURE         R3 P2
0021  [  5]  SETTABLE        R3 R0 R1
0022  [  5]  SUBI            R1 R1 #1
0023  [  5]  LEI             R2 #1 inv=false
0024  [  5]  JMP             +1
0025  [  5]  JMP             +2
0026  [  5]  CLOSE           R2
0027  [  5]  JMP             -9
0028  [  5]  CLOSE           R2
0029  [  6]  GETTABUP        R2 U0 K3  ; "ipairs"
0030  [  6]  MOVE            R3 R0
0031  [  6]  CALL            R2 args=2 ret=5
0032  [  6]  TFORPREP        R2 +3
0033  [  6]  CLOSURE         R8 P3
0034  [  6]  SETTABLE        R8 R0 R7
0035  [  6]  CLOSE           R6
0036  [  6]  TFORCALL        R2 count=2
0037  [  6]  TFORLOOP        R2 -5
0038  [  6]  CLOSE           R4
0039  [  7]  LOAD            R2 K0  ; 1
0040  [  7]  CLOSURE         R3 P4
0041  [  7]  SETFIELD        R3 R0 K4  ; "f"
0042  [  7]  CLOSE           R2
0043  [  8]  LOAD            R2 K0  ; 1
0044  [  8]  LOAD            R3 K1  ; 3
0045  [  8]  LOAD            R4 K0  ; 1
0046  [  8]  FORPREP         R2 +8
0047  [  8]  CLOSURE         R6 P5
0048  [  8]  SETTABLE        R6 R0 R5
0049  [  8]  EQI             R5 #2 inv=false
0050  [  8]  JMP             +2
0051  [  8]  CLOSE           R5
0052  [  8]  JMP             +2
0053  [  8]  CLOSE           R5
0054  [  8]  FORLOOP         R2 -8
0055  [  8]  RETURN          R0 count=1

; prototype 0:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R4
  ; code:
  0000  [  2]  GETUPVAL        R0 U0
  0001  [  2]  RETURN1         R0

; prototype 1:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R2
  ; code:
  0000  [  4]  GETUPVAL        R0 U0
  0001  [  4]  RETURN1         R0

; prototype 2:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R2
  ; code:
  0000  [  5]  GETUPVAL        R0 U0
  0001  [  5]  RETURN1         R0

; prototype 3:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R7
  ; code:
  0000  [  6]  GETUPVAL        R0 U0
  0001  [  6]  RETURN1         R0

; prototype 4:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R2
  ; code:
  0000  [  7]  GETUPVAL        R0 U0
  0001  [  7]  RETURN1         R0

; prototype 5:
  ; function (params=0, vararg=false, stack=1, upvalues=1)
  ; upvalues:
  ;   U0 = local R5
  ; code:
  0000  [  8]  GETUPVAL        R0 U0
  0001  [  8]  RETURN1         R0
