src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_method_call.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=9, upvalues=1)
; constants:
;   K0 = "id"
;   K1 = "add"
;   K2 = "chain"
;   K3 = 1
;   K4 = 2
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  6]  NEWTABLE        R0 T0  ; {}
0002  [  7]  CLOSURE         R1 P0
0003  [  7]  SETFIELD        R1 R0 K0  ; "id"
0004  [  8]  CLOSURE         R1 P1
0005  [  8]  SETFIELD        R1 R0 K1  ; "add"
0006  [  9]  CLOSURE         R1 P2
0007  [  9]  SETFIELD        R1 R0 K2  ; "chain"
0008  [ 12]  SELF            R1 R0 K0  ; "id"
0009  [ 12]  CALL            R1 args=2 ret=2
0010  [ 15]  SELF            R2 R0 K1  ; "add"
0011  [ 15]  LOAD            R4 K3  ; 1
0012  [ 15]  LOAD            R5 K4  ; 2
0013  [ 15]  CALL            R2 args=4 ret=2
0014  [ 18]  CLOSURE         R3 P3
0015  [ 19]  MOVE            R4 R3
0016  [ 19]  SELF            R5 R0 K0  ; "id"
0017  [ 19]  CALL            R5 args=2 ret=0
0018  [ 19]  CALL            R4 args=0 ret=2
0019  [ 22]  SELF            R5 R0 K2  ; "chain"
0020  [ 22]  CALL            R5 args=2 ret=2
0021  [ 22]  SELF            R5 R5 K0  ; "id"
0022  [ 22]  CALL            R5 args=2 ret=2
0023  [ 25]  CLOSURE         R6 P4
0024  [ 26]  MOVE            R7 R6
0025  [ 26]  MOVE            R8 R0
0026  [ 26]  CALL            R7 args=2 ret=1
0027  [ 28]  RETURN          R2 count=2

; prototype 0:
  ; function (params=1, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [  7]  RETURN1         R0

; prototype 1:
  ; function (params=3, vararg=false, stack=4, upvalues=0)
  ; code:
  0000  [  8]  ADD             R3 R1 R2
  0001  [  8]  RETURN1         R3

; prototype 2:
  ; function (params=1, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [  9]  RETURN1         R0

; prototype 3:
  ; function (params=1, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [ 18]  RETURN1         R0

; prototype 4:
  ; function (params=1, vararg=false, stack=3, upvalues=0)
  ; constants:
  ;   K0 = "id"
  ; code:
  0000  [ 25]  SELF            R1 R0 K0  ; "id"
  0001  [ 25]  TAILCALL        R1 args=2
