src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_method_def.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=3, upvalues=1)
; constants:
;   K0 = "inner"
;   K1 = "get"
;   K2 = "add"
;   K3 = "m"
;   K4 = "plain"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  FUNC
0001  [  1]  VARARGPREP      fixed=0
0002  [  1]  NEWTABLE        R0 T1  ; {v=5, inner}
0003  [  1]  NEWTABLE        R1 T0  ; {}
0004  [  1]  SETFIELD        R1 R0 K0  ; "inner"
0005  [  2]  CLOSURE         R1 P0
0006  [  2]  SETFIELD        R1 R0 K1  ; "get"
0007  [  3]  CLOSURE         R1 P1
0008  [  3]  SETFIELD        R1 R0 K2  ; "add"
0009  [  4]  GETFIELD        R1 R0 K0  ; "inner"
0010  [  4]  CLOSURE         R2 P2
0011  [  4]  SETFIELD        R2 R1 K3  ; "m"
0012  [  5]  GETFIELD        R1 R0 K0  ; "inner"
0013  [  5]  CLOSURE         R2 P3
0014  [  5]  SETFIELD        R2 R1 K4  ; "plain"
0015  [  5]  RETURN          R0 count=1

; prototype 0:
  ; function (params=1, vararg=false, stack=2, upvalues=0)
  ; constants:
  ;   K0 = "v"
  ; code:
  0000  [  2]  FUNC
  0001  [  2]  GETFIELD        R1 R0 K0  ; "v"
  0002  [  2]  RETURN1         R1

; prototype 1:
  ; function (params=2, vararg=true, stack=4, upvalues=0)
  ; constants:
  ;   K0 = "v"
  ; code:
  0000  [  3]  FUNC
  0001  [  3]  VARARGPREP      fixed=2
  0002  [  3]  GETFIELD        R2 R0 K0  ; "v"
  0003  [  3]  ADD             R2 R2 R1
  0004  [  3]  VARARG          R3 count=0
  0005  [  3]  RETURN          R2 count=0

; prototype 2:
  ; function (params=2, vararg=false, stack=4, upvalues=0)
  ; code:
  0000  [  4]  FUNC
  0001  [  4]  MOVE            R2 R0
  0002  [  4]  MOVE            R3 R1
  0003  [  4]  RETURN          R2 count=3

; prototype 3:
  ; function (params=1, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [  5]  FUNC
  0001  [  5]  RETURN1         R0
