src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_multi_assign_cycle.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=5, upvalues=1)
; constants:
;   K0 = 1
;   K1 = 2
;   K2 = 3
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  LOAD            R0 K0  ; 1
0002  [  1]  LOAD            R1 K1  ; 2
0003  [  1]  LOAD            R2 K2  ; 3
0004  [  2]  MOVE            R3 R1
0005  [  2]  MOVE            R4 R2
0006  [  2]  MOVE            R2 R0
0007  [  2]  MOVE            R1 R4
0008  [  2]  MOVE            R0 R3
0009  [  2]  RETURN          R0 count=1
